--- a/notebooks/99_resources.ipynb
+++ b/notebooks/99_resources.ipynb
@@ -23,7 +23,7 @@
     "Documentation\n",
     "---\n",
     "\n",
-    "For information related to Python programming, always refer to the [official Python documentation](https://docs.python.org/3/) (v3.4)."
+    "For information related to Python programming, always refer to the [official Python documentation](https://docs.python.org/) "
    ]
   },
   {
@@ -121,8 +121,21 @@
     "    Level - Intermediate/Advanced\n",
     "\n",
     "\n",
+    "- [Python Code Katas](https://github.com/gudnm/codekatas/blob/master/codekatas.ipynb)\n",
+    "\n",
+    "    Keep your skills sharp by implementing fundamental (and sometimes tricky) algorithms and data structures over and over again.\n",
+    "    \n",
+    "    Level - Intermediate/Advanced\n",
+    "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
