--- a/notebooks/00_index.ipynb
+++ b/notebooks/00_index.ipynb
@@ -15,6 +15,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Topic Summary: [Python 101 Content](98_contents.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Collaborative Learning\n",
     "\n",
     "* If you DON’T know, ask in ZOOM or Slack\n",
@@ -26,7 +33,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -174,6 +180,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Start your journey!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Start Here:** [Hello World](01_hello_world.ipynb), your very first Python program."
    ]
   },
@@ -182,7 +195,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Click Here for Reference\n",
+    "\n",
+    "**Start Here:** [Hello World](01_hello_world.ipynb), your very first Python program.\n",
+    "    \n",
+    "99_resources.ipynb"
+   ]
   }
  ],
  "metadata": {
