--- a/notebooks/11_terminal_apps.ipynb
+++ b/notebooks/11_terminal_apps.ipynb
@@ -964,7 +964,7 @@
    "source": [
     "Basic Pickling\n",
     "---\n",
-    "When we \"pickle\" something in the physical world, we soak it in salt and vinegar so it won't rot. \"Pickling\" an object in Python packages it up and stores it on disk in a way that we can get it back in its original form later. You don't want to use `pickle` for imporant data, but it's a good way to get started with storing data after your program closes.\n",
+    "\"Pickling\" an object in Python packages it up and stores it on disk in a way that we can get it back in its original form later. You don't want to use `pickle` for imporant data, but it's a good way to get started with storing data after your program closes.\n",
     "\n",
     "Here is a simple program that asks the user for some input, and then stores the input in a list. The program dumps the list to a file using `pickle`, and the next time the program runs it loads that data back in. Run this program on your computer, and see if it works for you."
    ]
@@ -1024,7 +1024,6 @@
     "- **A call to `pickle.dump()`.**\n",
     "    - Line 34 'dumps' the list animals into the file that was opened. (It is not dumped in a format that we can read.)\n",
     "    \n",
-    "**Note:** This may work slightly differently in Python 2, and on Windows or Mac. This notebook will be updated to include those specific differences.\n",
     "\n",
     "When you run this program on your computer, look for the file *animals.pydata* in the same directory as the program file. If that worked, we need to modify the program so that the next time it runs it loads the data from *animals.pydata* back in.\n",
     "\n",
