--- a/notebooks/00_index.ipynb
+++ b/notebooks/00_index.ipynb
@@ -48,58 +48,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    \n",
-    "# Exploring the Python Community\n",
-    "\n",
-    "As I have said earlier, the Python community is incredibly rich and diverse. Here are a couple resources to look at, if you want to do some exploring.\n",
-    "\n",
-    "- [The Python website](http://python.org/)\n",
-    "\n",
-    "    The main Python website is probably not of too much interest to you at this point, but it is a great resource to know about as you start to learn more.\n",
-    "    \n",
-    "<!-- -->\n",
-    "\n",
-    "- [PyCon](https://us.pycon.org/)\n",
-    "\n",
-    "    The Python Conference (PyCon) is an incredible event, and the community is entirely welcoming to new programmers. They happen all over the world, throughout the year. If you can make your way to one of these conferences, you will learn a great deal and meet some really interesting people.\n",
-    "\n",
-    "<!-- -->\n",
-    "    \n",
-    "- [PyLadies](http://www.pyladies.com/)\n",
-    "\n",
-    "    Women and minorities are still under-represented in most technology fields, and the programming world is no different in this regard. That said, the Python community may well be the most welcoming and supportive programming community for women and minorities. There are a number of groups dedicated to bringing women and minorities together around programming in Python, and there are a number of explicit Codes of Conduct for Python-related events.\n",
-    "\n",
-    "    PyLadies is one of the most visible of these organizations. They are a great resource, so go see what they do and what they have to offer.\n",
-    "\n",
-    "<!-- -->\n",
-    "    \n",
-    "- [Python User Groups](https://wiki.python.org/moin/LocalUserGroups)\n",
-    "\n",
-    "    Wherever there are a number of Python programmers, they will find a way to get together. Python user groups are regular meetings of Python users from a local area. Go take a look at the list of user groups, and see if there is one near you.\n",
-    "    \n",
-    "<!-- -->\n",
-    "    \n",
-    "- [Python PH](https://www.facebook.com/groups/pythonph/)\n",
-    "\n",
-    "    We are PythonPH, a community in the Philippines for enthusiasts and users of the Python programming language. Our aim is to show that Python has something for everyone: from hobbyists, to educators, to professionals. More info: http://python.ph/\n",
-    "\n",
-    "<!-- -->\n",
-    "    \n",
-    "- [StackOverflow PH](https://stackoverflow.com/questions/tagged/python)\n",
-    "\n",
-    "    Stack Overflow is a question and answer site for professional and enthusiast programmers. It's built and run by you as part of the Stack Exchange network of Q&A sites. With your help, we're working together to build a library of detailed answers to every question about programming.\n",
-    "\n",
-    "<!-- -->\n",
-    "    \n",
-    "- [Github Python](https://github.com/topics/python)\n",
-    "\n",
-    "     Github provides hosting for software development and version control using Git. It offers the distributed version control and source code management functionality of Git, plus its own features."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Zen of Python\n",
     "===\n",
     "The Python community is incredibly large and diverse. People are using Python in science, in medicine, in robotics, on the internet, and in any other field you can imagine. This diverse group of thinkers has developed a collective mindset about how programs should be written. If you want to understand Python and the community of Python programmers, it is a good idea to learn the ways Python programmers think.\n",
@@ -109,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -142,6 +90,13 @@
    ],
    "source": [
     "import this"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -191,16 +146,62 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "Click Here for Reference\n",
-    "\n",
-    "**Start Here:** [Hello World](01_hello_world.ipynb), your very first Python program.\n",
+    "Want to improve your Py-fu? Click here for [Other References](99_resources.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "    \n",
-    "99_resources.ipynb"
+    "# Exploring the Python Community\n",
+    "\n",
+    "As I have said earlier, the Python community is incredibly rich and diverse. Here are a couple resources to look at, if you want to do some exploring.\n",
+    "\n",
+    "- [The Python website](http://python.org/)\n",
+    "\n",
+    "    The main Python website is probably not of too much interest to you at this point, but it is a great resource to know about as you start to learn more.\n",
+    "    \n",
+    "<!-- -->\n",
+    "\n",
+    "- [PyCon](https://us.pycon.org/)\n",
+    "\n",
+    "    The Python Conference (PyCon) is an incredible event, and the community is entirely welcoming to new programmers. They happen all over the world, throughout the year. If you can make your way to one of these conferences, you will learn a great deal and meet some really interesting people.\n",
+    "\n",
+    "<!-- -->\n",
+    "    \n",
+    "- [PyLadies](http://www.pyladies.com/)\n",
+    "\n",
+    "    Women and minorities are still under-represented in most technology fields, and the programming world is no different in this regard. That said, the Python community may well be the most welcoming and supportive programming community for women and minorities. There are a number of groups dedicated to bringing women and minorities together around programming in Python, and there are a number of explicit Codes of Conduct for Python-related events.\n",
+    "\n",
+    "    PyLadies is one of the most visible of these organizations. They are a great resource, so go see what they do and what they have to offer.\n",
+    "\n",
+    "<!-- -->\n",
+    "    \n",
+    "- [Python User Groups](https://wiki.python.org/moin/LocalUserGroups)\n",
+    "\n",
+    "    Wherever there are a number of Python programmers, they will find a way to get together. Python user groups are regular meetings of Python users from a local area. Go take a look at the list of user groups, and see if there is one near you.\n",
+    "    \n",
+    "<!-- -->\n",
+    "    \n",
+    "- [Python PH](https://www.facebook.com/groups/pythonph/)\n",
+    "\n",
+    "    We are PythonPH, a community in the Philippines for enthusiasts and users of the Python programming language. Our aim is to show that Python has something for everyone: from hobbyists, to educators, to professionals. More info: http://python.ph/\n",
+    "\n",
+    "<!-- -->\n",
+    "    \n",
+    "- [StackOverflow PH](https://stackoverflow.com/questions/tagged/python)\n",
+    "\n",
+    "    Stack Overflow is a question and answer site for professional and enthusiast programmers. It's built and run by you as part of the Stack Exchange network of Q&A sites. With your help, we're working together to build a library of detailed answers to every question about programming.\n",
+    "\n",
+    "<!-- -->\n",
+    "    \n",
+    "- [Github Python](https://github.com/topics/python)\n",
+    "\n",
+    "     Github provides hosting for software development and version control using Git. It offers the distributed version control and source code management functionality of Git, plus its own features."
    ]
   }
  ],
